[package]
name = "gll-test"
version = "0.1.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
petgraph = "0.4"
rpds = "0.7"
gll-pg-core = { path = "../gll-pg/gll-pg-core" }
gll-pg-macros = { path = "../gll-pg/gll-pg-macros" }
logos = "0.9"